@@ -25,12 +25,12 @@
 
 package org.jmol.io;
 
-import org.jmol.util.StringXBuilder;
+import org.jmol.util.SB;
 import org.jmol.util.TextFormat;
 
-//import java.util.ArrayList;
+//import org.jmol.util.JmolList;
 //import java.util.Iterator;
-//import java.util.List;
+//
 //import java.util.Map;
 
 //import org.jmol.script.Token;
@@ -40,24 +40,24 @@ public class XmlUtil {
 
   // / simple Xml parser/generator ///
 
-  public static void openDocument(StringXBuilder data) {
+  public static void openDocument(SB data) {
     data.append("<?xml version=\"1.0\"?>\n");
   }
 
-  public static void openTag(StringXBuilder sb, String name) {
+  public static void openTag(SB sb, String name) {
     sb.append("<").append(name).append(">\n");
   }
 
-  public static void openTagAttr(StringXBuilder sb, String name, Object[] attributes) {
+  public static void openTagAttr(SB sb, String name, Object[] attributes) {
     appendTagAll(sb, name, attributes, null, false, false);
     sb.append("\n");
   }
 
-  public static void closeTag(StringXBuilder sb, String name) {
+  public static void closeTag(SB sb, String name) {
     sb.append("</").append(name).append(">\n");
   }
 
-  public static void appendTagAll(StringXBuilder sb, String name,
+  public static void appendTagAll(SB sb, String name,
                                Object[] attributes, Object data,
                                boolean isCdata, boolean doClose) {
     String closer = ">";
@@ -120,7 +120,7 @@ public class XmlUtil {
    * @param attributes
    * @param data
    */
-  public static void appendTagObj(StringXBuilder sb, String name,
+  public static void appendTagObj(SB sb, String name,
                                Object[] attributes, Object data) {
     appendTagAll(sb, name, attributes, data, false, true);
   }
@@ -133,7 +133,7 @@ public class XmlUtil {
    * @param name
    * @param data
    */
-  public static void appendTag(StringXBuilder sb, String name, Object data) {
+  public static void appendTag(SB sb, String name, Object data) {
     if (data instanceof Object[])
       appendTagAll(sb, name, (Object[]) data, null, false, true);
     else
@@ -150,7 +150,7 @@ public class XmlUtil {
    * @param attributes 
    * @param data
    */
-  public static void appendCdata(StringXBuilder sb, String name, 
+  public static void appendCdata(SB sb, String name, 
                                  Object[] attributes, String data) {
     appendTagAll(sb, name, attributes, data, true, true);
   }
@@ -161,7 +161,7 @@ public class XmlUtil {
    * @param name
    * @param value
    */
-  public static void appendAttrib(StringXBuilder sb, Object name, Object value) {
+  public static void appendAttrib(SB sb, Object name, Object value) {
     if (value == null)
       return;
     
@@ -170,7 +170,7 @@ public class XmlUtil {
     sb.append(" ").appendO(name).append("=\"").appendO(value).append("\"");
   }
 
-//  public static void toXml(StringXBuilder sb, String name, List<Object[]> properties) {
+//  public static void toXml(StringXBuilder sb, String name, JmolList<Object[]> properties) {
 //    for (int i = 0; i < properties.size(); i++) {
 //      Object[] o = properties.get(i);
 //      appendTagObj(sb, name, (Object[]) o[0], o[1]);
@@ -178,7 +178,7 @@ public class XmlUtil {
 //  }
 
 //  @SuppressWarnings("unchecked")
-//  public static Object escape(String name, List<Object[]> atts, Object value,
+//  public static Object escape(String name, JmolList<Object[]> atts, Object value,
 //                              boolean asString, String indent) {
 //
 //    StringXBuilder sb;
@@ -194,10 +194,10 @@ public class XmlUtil {
 //      } else if (value instanceof BitSet) {
 //        value = Escape.escape(value);
 //      } else if (value instanceof List) {
-//        List<Object> v = (List<Object>) value;
+//        JmolList<Object> v = (JmolList<Object>) value;
 //        sb = new StringXBuilder().append("\n");
 //        if (atts == null)
-//          atts = new ArrayList<Object[]>();
+//          atts = new  JmolList<Object[]>();
 //        atts.add(new Object[] { "count", Integer.valueOf(v.size()) });
 //        for (int i = 0; i < v.size(); i++)
 //          sb.appendO(
@@ -215,35 +215,35 @@ public class XmlUtil {
 //              escape(name2, null, ht.get(name2), true, indent + "  "));
 //        }
 //        if (atts == null)
-//          atts = new ArrayList<Object[]>();
-//        atts.add(new Object[] { "count", new Integer(n) });
+//          atts = new  JmolList<Object[]>();
+//        atts.add(new Object[] { "count", Integer.valueOf(n) });
 //        value = sb.toString();
 //      } else if (type.startsWith("[")) {
 //        if (value instanceof float[]) {
 //          float[] f = (float[]) value;
 //          sb = new StringXBuilder().append("\n");
 //          if (atts == null)
-//            atts = new ArrayList<Object[]>();
-//          atts.add(new Object[] { "count", new Integer(f.length) });
+//            atts = new  JmolList<Object[]>();
+//          atts.add(new Object[] { "count", Integer.valueOf(f.length) });
 //          for (int i = 0; i < f.length; i++)
-//            sb.appendO(escape(null, null, new Float(f[i]), true, indent + "  "));
+//            sb.appendO(escape(null, null, Float.valueOf(f[i]), true, indent + "  "));
 //          value = sb.toString();
 //        } else if (value instanceof int[]) {
 //          int[] iv = (int[]) value;
 //          sb = new StringXBuilder().append("\n");
 //          if (atts == null)
-//            atts = new ArrayList<Object[]>();
-//          atts.add(new Object[] { "count", new Integer(iv.length) });
+//            atts = new  JmolList<Object[]>();
+//          atts.add(new Object[] { "count", Integer.valueOf(iv.length) });
 //          for (int i = 0; i < iv.length; i++)
-//            sb.appendO(escape(null, null, new Integer(iv[i]), true, indent + "  "));
+//            sb.appendO(escape(null, null, Integer.valueOf(iv[i]), true, indent + "  "));
 //          value = sb.toString();
 //          
 //        } else if (value instanceof Object[]) {
 //          Object[] o = (Object[]) value;
 //          sb = new StringXBuilder().append("\n");
 //          if (atts == null)
-//            atts = new ArrayList<Object[]>();
-//          atts.add(new Object[] { "count", new Integer(o.length) });
+//            atts = new  JmolList<Object[]>();
+//          atts.add(new Object[] { "count", Integer.valueOf(o.length) });
 //          for (int i = 0; i < o.length; i++)
 //            sb.appendO(escape(null, null, o[i], true, indent + "  "));
 //          value = sb.toString();
@@ -254,7 +254,7 @@ public class XmlUtil {
 //          
 //      }
 //    }
-//    List<Object[]> attributes = new ArrayList<Object[]>();
+//    JmolList<Object[]> attributes = new  JmolList<Object[]>();
 //    attributes.add(new Object[] { "name", name });
 //    attributes.add(new Object[] { "type", type });
 //    if (atts != null)
