@@ -30,15 +30,16 @@ import org.jmol.modelset.Bond;
 import org.jmol.modelset.Chain;
 import org.jmol.modelset.Group;
 
-import org.jmol.util.BitSet;
+import org.jmol.util.BS;
+import org.jmol.util.JmolList;
 import org.jmol.util.Logger;
 import org.jmol.util.Measure;
-import org.jmol.util.Point3f;
+import org.jmol.util.P3;
 import org.jmol.util.Quaternion;
-import org.jmol.viewer.JmolConstants;
-import org.jmol.script.Token;
+import org.jmol.viewer.JC;
+import org.jmol.script.T;
 
-import java.util.List;
+
 import java.util.Map;
 
 
@@ -46,20 +47,20 @@ public abstract class Monomer extends Group {
 
   BioPolymer bioPolymer;
 
-  protected final byte[] offsets;
+  protected byte[] offsets;
 
   protected static boolean have(byte[] offsets, byte n) {
     return (offsets[n] & 0xFF) != 0xFF;
   }
 
-  protected Monomer(Chain chain, String group3, int seqcode,
-          int firstAtomIndex, int lastAtomIndex,
-          byte[] interestingAtomOffsets) {
-    super(chain, group3, seqcode, firstAtomIndex, lastAtomIndex);
+  protected Monomer set2(Chain chain, String group3, int seqcode,
+                    int firstAtomIndex, int lastAtomIndex, byte[] interestingAtomOffsets) {
+    setGroup(chain, group3, seqcode, firstAtomIndex, lastAtomIndex);
     offsets = interestingAtomOffsets;
     int offset = offsets[0] & 0xFF;
     if (offset != 255)
       leadAtomIndex = firstAtomIndex + offset;
+    return this;
   }
 
   int monomerIndex;
@@ -211,7 +212,7 @@ public abstract class Monomer extends Group {
     return null;
   }
 
-  protected final Point3f getSpecialAtomPoint(byte[] interestingIDs,
+  protected final P3 getSpecialAtomPoint(byte[] interestingIDs,
                                     byte specialAtomID) {
     for (int i = interestingIDs.length; --i >= 0; ) {
       int interestingID = interestingIDs[i];
@@ -281,7 +282,7 @@ public abstract class Monomer extends Group {
   }
   
   public Map<String, Object> getMyInfo() {
-    Map<String, Object> info = super.getGroupInfo(groupIndex);
+    Map<String, Object> info = getGroupInfo(groupIndex);
     char chainID = chain.chainID;
     info.put("chain", (chainID == '\0' ? "" : "" + chainID));
     int seqNum = getSeqNumber();
@@ -290,18 +291,18 @@ public abstract class Monomer extends Group {
       info.put("sequenceNumber", Integer.valueOf(seqNum));
     if (insCode != 0)      
       info.put("insertionCode","" + insCode);
-    float f = getGroupParameter(Token.phi);
+    float f = getGroupParameter(T.phi);
     if (!Float.isNaN(f))
-      info.put("phi", new Float(f));
-    f = getGroupParameter(Token.psi);
+      info.put("phi", Float.valueOf(f));
+    f = getGroupParameter(T.psi);
     if (!Float.isNaN(f))
-      info.put("psi", new Float(f));
-    f = getGroupParameter(Token.eta);
+      info.put("psi", Float.valueOf(f));
+    f = getGroupParameter(T.eta);
     if (!Float.isNaN(f))
-      info.put("mu", new Float(f));
-    f = getGroupParameter(Token.theta);
+      info.put("mu", Float.valueOf(f));
+    f = getGroupParameter(T.theta);
     if (!Float.isNaN(f))
-      info.put("theta", new Float(f));
+      info.put("theta", Float.valueOf(f));
     ProteinStructure structure = getProteinStructure();
     if(structure != null) {
       info.put("structureId", Integer.valueOf(structure.strucNo));
@@ -326,7 +327,7 @@ public abstract class Monomer extends Group {
    * @param bsConformation
    * @param conformationIndex   will be >= 0
    */
-  void getConformation(Atom[] atoms, BitSet bsConformation, int conformationIndex) {
+  void getConformation(Atom[] atoms, BS bsConformation, int conformationIndex) {
 
     // A        A
     // A        B
@@ -352,7 +353,7 @@ public abstract class Monomer extends Group {
     }
   }
 
-  final void updateOffsetsForAlternativeLocations(Atom[] atoms, BitSet bsSelected) {
+  final void updateOffsetsForAlternativeLocations(Atom[] atoms, BS bsSelected) {
       for (int offsetIndex = offsets.length; --offsetIndex >= 0;) {
         int offset = offsets[offsetIndex] & 0xFF;
         if (offset == 255)
@@ -387,8 +388,8 @@ public abstract class Monomer extends Group {
 
   }
     
-  final void getMonomerSequenceAtoms(BitSet bsInclude, BitSet bsResult) {
-    super.selectAtoms(bsResult);
+  final void getMonomerSequenceAtoms(BS bsInclude, BS bsResult) {
+    selectAtoms(bsResult);
     bsResult.and(bsInclude);
   }
   
@@ -408,7 +409,7 @@ public abstract class Monomer extends Group {
    * @param qtype
    * @return center
    */
-  Point3f getQuaternionFrameCenter(char qtype) {
+  P3 getQuaternionFrameCenter(char qtype) {
     return null; 
   }
 
@@ -416,15 +417,15 @@ public abstract class Monomer extends Group {
     int iPrev = monomerIndex - mStep;
     Monomer prev = (mStep < 1 || monomerIndex <= 0 ? null : bioPolymer.monomers[iPrev]);
     Quaternion q2 = getQuaternion(qType);
-    Quaternion q1 = (mStep < 1 ? Quaternion.getQuaternionFrameV(JmolConstants.axisX, JmolConstants.axisY, JmolConstants.axisZ, false) 
+    Quaternion q1 = (mStep < 1 ? Quaternion.getQuaternionFrameV(JC.axisX, JC.axisY, JC.axisZ, false) 
         : prev == null ? null : prev.getQuaternion(qType));
     if (q1 == null || q2 == null)
-      return super.getHelixData(tokType, qType, mStep);
-    Point3f a = (mStep < 1 ? Point3f.new3(0, 0, 0) : prev.getQuaternionFrameCenter(qType));
-    Point3f b = getQuaternionFrameCenter(qType);
+      return getHelixData(tokType, qType, mStep);
+    P3 a = (mStep < 1 ? P3.new3(0, 0, 0) : prev.getQuaternionFrameCenter(qType));
+    P3 b = getQuaternionFrameCenter(qType);
     if (a == null || b == null)
-      return super.getHelixData(tokType, qType, mStep);
-    return Measure.computeHelicalAxis(tokType == Token.draw ? "helixaxis" + getUniqueID() : null, 
+      return getHelixData(tokType, qType, mStep);
+    return Measure.computeHelicalAxis(tokType == T.draw ? "helixaxis" + getUniqueID() : null, 
         tokType, a, b, q2.div(q1));
   }
 
@@ -448,18 +449,18 @@ public abstract class Monomer extends Group {
   }
  
   @Override
-  public boolean getCrossLinkLead(List<Integer> vReturn) {    
+  public boolean getCrossLinkLead(JmolList<Integer> vReturn) {    
    for (int i = firstAtomIndex; i <= lastAtomIndex; i++)
       if (getCrossLink(i, vReturn) && vReturn == null)
           return true;
     return false;
   }  
 
-  protected boolean getCrossLink(int i, List<Integer> vReturn) {
+  protected boolean getCrossLink(int i, JmolList<Integer> vReturn) {
     return getCrossLinkGroup(i, vReturn, null);
   }
   
-  private boolean getCrossLinkGroup(int i, List<Integer> vReturn, Group group) {
+  private boolean getCrossLinkGroup(int i, JmolList<Integer> vReturn, Group group) {
     // vReturn null --> just checking for connection to previous group
     // not obvious from PDB file for carbohydrates
     Atom atom = chain.getAtom(i);
@@ -485,7 +486,7 @@ public abstract class Monomer extends Group {
         haveCrossLink = true;
         if (group != null)
           break;
-        vReturn.add(Integer.valueOf(g.leadAtomIndex));
+        vReturn.addLast(Integer.valueOf(g.leadAtomIndex));
       }
     }
     return haveCrossLink;
