@@ -27,12 +27,12 @@ package org.jmol.shapesurface;
 
 
 import org.jmol.shape.Shape;
-import org.jmol.util.BitSet;
-import org.jmol.util.Colix;
+import org.jmol.util.BS;
+import org.jmol.util.C;
 import org.jmol.util.Escape;
-import org.jmol.util.StringXBuilder;
+import org.jmol.util.SB;
 import org.jmol.util.TextFormat;
-import org.jmol.util.Vector3f;
+import org.jmol.util.V3;
 
 public class LcaoCartoon extends Isosurface {
 
@@ -49,9 +49,9 @@ public class LcaoCartoon extends Isosurface {
   private String thisType;
   private int myColorPt;
   private String lcaoID;
-  private BitSet thisSet;
+  private BS thisSet;
   private boolean isMolecular;
-  private Vector3f rotationAxis;
+  private V3 rotationAxis;
 
   //persistent
   private Float lcaoScale;
@@ -66,7 +66,7 @@ public class LcaoCartoon extends Isosurface {
   private String fullCommand;
 
   @Override
-  public void setProperty(String propertyName, Object value, BitSet bs) {
+  public void setProperty(String propertyName, Object value, BS bs) {
 
     // in the case of molecular orbitals, we just cache the information and
     // then send it all at once. 
@@ -82,7 +82,7 @@ public class LcaoCartoon extends Isosurface {
       rotationAxis = null;
       fullCommand = (String) value;
       // overide bitset selection
-      super.setProperty("init", null, null);
+      setPropI("init", null, null);
       return;
     }
 
@@ -105,7 +105,7 @@ public class LcaoCartoon extends Isosurface {
     }
 
     if ("rotationAxis" == propertyName) {
-      rotationAxis = (Vector3f) value;
+      rotationAxis = (V3) value;
       return;
     }
 
@@ -122,7 +122,7 @@ public class LcaoCartoon extends Isosurface {
     }
 
     if ("select" == propertyName) {
-      thisSet = (BitSet) value;
+      thisSet = (BS) value;
       //pass through
     }
 
@@ -203,7 +203,7 @@ public class LcaoCartoon extends Isosurface {
       getCapSlabInfo(fullCommand);
     }
 
-    super.setProperty(propertyName, value, bs);
+    setPropI(propertyName, value, bs);
     
     //from the state:
     if (setInfo || "lobe" == propertyName || "sphere" == propertyName) {
@@ -270,25 +270,25 @@ public class LcaoCartoon extends Isosurface {
     for (int i = meshCount; --i >= 0;)
       if (meshes[i].thisID.indexOf(id) == 0)
         deleteMeshI(i);
-    super.setProperty("init", null, null);
-    super.setProperty("thisID", id, null);
+    setPropI("init", null, null);
+    setPropI("thisID", id, null);
     //System.out.println("lcaocartoon: " + id);
     if (lcaoScale != null)
-      super.setProperty("scale", lcaoScale, null);
+      setPropI("scale", lcaoScale, null);
     if (isCpk) {
-      super.setProperty("colorRGB", Integer.valueOf(viewer.getAtomArgb(iAtom)), null);
+      setPropI("colorRGB", Integer.valueOf(viewer.getAtomArgb(iAtom)), null);
     } else if (lcaoColorNeg != null) {
-      super.setProperty("colorRGB", lcaoColorNeg, null);
-      super.setProperty("colorRGB", lcaoColorPos, null);
+      setPropI("colorRGB", lcaoColorNeg, null);
+      setPropI("colorRGB", lcaoColorPos, null);
     }
     if (slabbingObject != null)
-      super.setProperty("slab", slabbingObject, null);
+      setPropI("slab", slabbingObject, null);
     if (cappingObject != null)
-      super.setProperty("cap", cappingObject, null);
-    super.setProperty("lcaoType", thisType, null);
-    super.setProperty("atomIndex", Integer.valueOf(iAtom), null);
-    Vector3f[] axes = { new Vector3f(), new Vector3f(),
-        Vector3f.newV(modelSet.atoms[iAtom]), new Vector3f() };
+      setPropI("cap", cappingObject, null);
+    setPropI("lcaoType", thisType, null);
+    setPropI("atomIndex", Integer.valueOf(iAtom), null);
+    V3[] axes = { new V3(), new V3(),
+        V3.newV(modelSet.atoms[iAtom]), new V3() };
     if (rotationAxis != null)
       axes[3].setT(rotationAxis);
     if (isMolecular) {
@@ -308,13 +308,13 @@ public class LcaoCartoon extends Isosurface {
     if (isMolecular || isCpk
         || thisType.equalsIgnoreCase("s")
         || viewer.getHybridizationAndAxes(iAtom, axes[0], axes[1], thisType) != null) {
-      super.setProperty((isRadical ? "radical" : isLonePair ? "lonePair" : "lcaoCartoon"), axes, null);
+      setPropI((isRadical ? "radical" : isLonePair ? "lonePair" : "lcaoCartoon"), axes, null);
     }
     if (isCpk) {
       short colix = viewer.getModelSet().getAtomColix(iAtom);
-      if (Colix.isColixTranslucent(colix)) {
-        super.setProperty("translucentLevel", new Float(Colix.getColixTranslucencyLevel(colix)), null);
-        super.setProperty("translucency", "translucent", null);
+      if (C.isColixTranslucent(colix)) {
+        setPropI("translucentLevel", Float.valueOf(C.getColixTranslucencyLevel(colix)), null);
+        setPropI("translucency", "translucent", null);
       }
     } else if (isTranslucent)
       for (int i = meshCount; --i >= 0;)
@@ -333,7 +333,7 @@ public class LcaoCartoon extends Isosurface {
 
   @Override
   public String getShapeState() {
-    StringXBuilder sb = new StringXBuilder();
+    SB sb = new SB();
     if (lcaoScale != null)
       appendCmd(sb, "lcaoCartoon scale " + lcaoScale.floatValue());
     if (lcaoColorNeg != null)
