@@ -25,19 +25,19 @@
 
 package org.jmol.shapesurface;
 
-import java.util.ArrayList;
+import org.jmol.util.JmolList;
 
 import java.util.Hashtable;
-import java.util.List;
+
 import java.util.Map;
 
 
 import org.jmol.util.ArrayUtil;
-import org.jmol.util.BitSet;
+import org.jmol.util.BS;
 import org.jmol.util.Escape;
-import org.jmol.util.Point4f;
-import org.jmol.util.StringXBuilder;
-import org.jmol.script.Token;
+import org.jmol.util.P4;
+import org.jmol.util.SB;
+import org.jmol.script.T;
 import org.jmol.shape.Shape;
 import org.jmol.constant.EnumQuantumShell;
 import org.jmol.jvxl.data.JvxlCoder;
@@ -49,14 +49,14 @@ public class MolecularOrbital extends Isosurface {
   public void initShape() {
     super.initShape();
     myType = "mo";
-    super.setProperty("thisID", "mo", null);
+    setPropI("thisID", "mo", null);
   }
 
   // these are globals, stored here and only passed on when the they are needed. 
 
   private String moTranslucency;
   private Float moTranslucentLevel;
-  private Point4f moPlane;
+  private P4 moPlane;
   private Float moCutoff;
   private Float moResolution;
   private Float moScale;
@@ -67,10 +67,10 @@ public class MolecularOrbital extends Isosurface {
   private Boolean moSquareData;
   private Boolean moSquareLinear;
   private Integer moRandomSeed;
-  private int moFill = Token.nofill;
-  private int moMesh = Token.mesh;
-  private int moDots = Token.nodots;
-  private int moFrontOnly = Token.frontonly;
+  private int moFill = T.nofill;
+  private int moMesh = T.mesh;
+  private int moDots = T.nodots;
+  private int moFrontOnly = T.frontonly;
   private String moTitleFormat;
   private boolean moDebug;
   private int myColorPt;
@@ -82,7 +82,7 @@ public class MolecularOrbital extends Isosurface {
 
   @SuppressWarnings("unchecked")
   @Override
-  public void setProperty(String propertyName, Object value, BitSet bs) {
+  public void setProperty(String propertyName, Object value, BS bs) {
 
     // in the case of molecular orbitals, we just cache the information and
     // then send it all at once. 
@@ -94,8 +94,8 @@ public class MolecularOrbital extends Isosurface {
       strID = getId(modelIndex);
       //Logger.info("MO init " + strID);
       // overide bitset selection
-      super.setProperty("init", null, null);
-      super.setProperty("modelIndex", Integer.valueOf(modelIndex), null);
+      setPropI("init", null, null);
+      setPropI("modelIndex", Integer.valueOf(modelIndex), null);
       if (htModels == null)
         htModels = new Hashtable<String, Map<String, Object>>();
       if (!htModels.containsKey(strID))
@@ -114,15 +114,15 @@ public class MolecularOrbital extends Isosurface {
       } else {
         Object[] slabInfo = (Object[]) value;
         int tok = ((Integer) slabInfo[0]).intValue();
-        moSlab = (List<Object>) thisModel.get("slab");
+        moSlab = (JmolList<Object>) thisModel.get("slab");
         if (moSlab == null)
-          thisModel.put("slab", moSlab = new ArrayList<Object>());
-        if (tok == Token.none) {
+          thisModel.put("slab", moSlab = new  JmolList<Object>());
+        if (tok == T.none) {
           moSlab = null;
           thisModel.remove("slab");
           return;
         }
-        moSlab.add(value);
+        moSlab.addLast(value);
       }
       return;
     }
@@ -171,7 +171,7 @@ public class MolecularOrbital extends Isosurface {
       if (!(value instanceof Integer))
         return;
       thisModel.remove("moTranslucency");
-      super.setProperty("color", value, bs);
+      setPropI("color", value, bs);
       propertyName = "colorRGB";
       myColorPt = 0;
       //$FALL-THROUGH$
@@ -251,20 +251,20 @@ public class MolecularOrbital extends Isosurface {
     if ("token" == propertyName) {
       int tok = ((Integer) value).intValue();
       switch (tok) {
-      case Token.dots:
-      case Token.nodots:
+      case T.dots:
+      case T.nodots:
         moDots = tok;
         break;
-      case Token.fill:
-      case Token.nofill:
+      case T.fill:
+      case T.nofill:
         moFill = tok;
         break;
-      case Token.mesh:
-      case Token.nomesh:
+      case T.mesh:
+      case T.nomesh:
         moMesh = tok;
         break;
-      case Token.frontonly:
-      case Token.notfrontonly:
+      case T.frontonly:
+      case T.notfrontonly:
         moFrontOnly = tok;
         break;
       }
@@ -306,7 +306,7 @@ public class MolecularOrbital extends Isosurface {
       htModels = htModelsNew;
       return;
     }
-    super.setProperty(propertyName, value, bs);
+    setPropI(propertyName, value, bs);
   }
 
   private String getId(int modelIndex) {
@@ -317,9 +317,9 @@ public class MolecularOrbital extends Isosurface {
   @Override
   public Object getProperty(String propertyName, int param) {
     if (propertyName.equals("list")) {
-      String s = (String) super.getProperty("list", param);
+      String s = (String) getPropI("list");
       if (s.length() > 1)
-        s += "cutoff = " + super.getProperty("cutoff", 0) + "\n";
+        s += "cutoff = " + getPropI("cutoff") + "\n";
       return viewer.getMoInfo(-1) + "\n" + s;
     }
     if (propertyName == "moNumber")
@@ -327,8 +327,8 @@ public class MolecularOrbital extends Isosurface {
     if (propertyName == "moLinearCombination")
       return moLinearCombination;
     if (propertyName == "showMO") {
-      StringXBuilder str = new StringXBuilder();
-      List<Map<String, Object>> mos = (List<Map<String, Object>>) (sg.getMoData().get("mos"));
+      SB str = new SB();
+      JmolList<Map<String, Object>> mos = (JmolList<Map<String, Object>>) (sg.getMoData().get("mos"));
       int nOrb = (mos == null ? 0 : mos.size());
       int thisMO = param;
       int currentMO = moNumber;
@@ -348,7 +348,7 @@ public class MolecularOrbital extends Isosurface {
         if (thisMO == 0 || thisMO == i || !doOneMo && i == currentMO) {
           if (!doOneMo) {
             Parameters params = sg.getParams();
-            super.setProperty("init", params, null);
+            setPropI("init", params, null);
             setOrbital(i, null);
           }
           jvxlData.moleculeXml = viewer.getModelCml(viewer.getModelUndeletedAtomsBitSet(thisMesh.modelIndex), 100, true);
@@ -361,7 +361,7 @@ public class MolecularOrbital extends Isosurface {
               null, false, 1, thisMesh.getState("mo"),
               (thisMesh.scriptCommand == null ? "" : thisMesh.scriptCommand)));
           if (!doOneMo)
-            super.setProperty("delete", "mo_show", null);
+            setPropI("delete", "mo_show", null);
           if (nTotal == 1)
             break;
         }
@@ -369,7 +369,7 @@ public class MolecularOrbital extends Isosurface {
           0, null, null));
       return str.toString();
     }
-    return super.getProperty(propertyName, param);
+    return getPropI(propertyName);
   }
 
   @Override
@@ -377,7 +377,7 @@ public class MolecularOrbital extends Isosurface {
     //sg = null; // not Molecular Orbitals
   }
 
-  private List<Object> moSlab;
+  private JmolList<Object> moSlab;
   private Integer moSlabValue;
   
   @SuppressWarnings("unchecked")
@@ -387,14 +387,14 @@ public class MolecularOrbital extends Isosurface {
       return false;
     moTranslucency = (String) thisModel.get("moTranslucency");
     moTranslucentLevel = (Float) thisModel.get("moTranslucentLevel");
-    moPlane = (Point4f) thisModel.get("moPlane");
+    moPlane = (P4) thisModel.get("moPlane");
     moCutoff = (Float) thisModel.get("moCutoff");
     if (moCutoff == null)
       moCutoff = (Float) sg.getMoData().get("defaultCutoff");
     if (moCutoff == null) {
-      moCutoff = new Float(Parameters.defaultQMOrbitalCutoff);
+      moCutoff = Float.valueOf(Parameters.defaultQMOrbitalCutoff);
     }
-    thisModel.put("moCutoff", new Float(moCutoff.floatValue()));
+    thisModel.put("moCutoff", Float.valueOf(moCutoff.floatValue()));
     moResolution = (Float) thisModel.get("moResolution");
     moScale = (Float) thisModel.get("moScale");
     moColorPos = (Integer) thisModel.get("moColorPos");
@@ -404,7 +404,7 @@ public class MolecularOrbital extends Isosurface {
     moMonteCarloCount = (Integer) thisModel.get("monteCarloCount");
     moRandomSeed = (Integer) thisModel.get("randomSeed");
     moSlabValue = (Integer)  thisModel.get("slabValue");
-    moSlab = (List<Object>) thisModel.get("slab");
+    moSlab = (JmolList<Object>) thisModel.get("slab");
     if (moRandomSeed == null)
       thisModel.put("randomSeed", moRandomSeed = Integer.valueOf(
           ((int) -System.currentTimeMillis())% 10000));
@@ -416,57 +416,57 @@ public class MolecularOrbital extends Isosurface {
   }
 
   private void setOrbital(int moNumber, float[] linearCombination) {
-    super.setProperty("reset", strID, null);
+    setPropI("reset", strID, null);
     if (moDebug)
-      super.setProperty("debug", Boolean.TRUE, null);
+      setPropI("debug", Boolean.TRUE, null);
     getSettings(strID);
     if (moScale != null)
-      super.setProperty("scale", moScale, null);
+      setPropI("scale", moScale, null);
     if (moResolution != null)
-      super.setProperty("resolution", moResolution, null);
+      setPropI("resolution", moResolution, null);
     if (moPlane != null) {
-      super.setProperty("plane", moPlane, null);
+      setPropI("plane", moPlane, null);
       if (moCutoff != null) {
-        super.setProperty("red", new Float(-moCutoff.floatValue()), null);
-        super.setProperty("blue", moCutoff, null);
+        setPropI("red", Float.valueOf(-moCutoff.floatValue()), null);
+        setPropI("blue", moCutoff, null);
       }
     } else {
       if (moCutoff != null)
-        super.setProperty((moIsPositiveOnly ? "cutoffPositive" : "cutoff"),
+        setPropI((moIsPositiveOnly ? "cutoffPositive" : "cutoff"),
             moCutoff, null);
       if (moColorNeg != null)
-        super.setProperty("colorRGB", moColorNeg, null);
+        setPropI("colorRGB", moColorNeg, null);
       if (moColorPos != null)
-        super.setProperty("colorRGB", moColorPos, null);
+        setPropI("colorRGB", moColorPos, null);
       if (moMonteCarloCount != null) {
-        super.setProperty("randomSeed", moRandomSeed, null);
-        super.setProperty("monteCarloCount", moMonteCarloCount, null);
+        setPropI("randomSeed", moRandomSeed, null);
+        setPropI("monteCarloCount", moMonteCarloCount, null);
       }
     }
-    super.setProperty("squareData", moSquareData, null);
-    super.setProperty("squareLinear", moSquareLinear, null);
-    super.setProperty("title", moTitleFormat, null);
-    super.setProperty("fileName", viewer.getFileName(), null);
-    super.setProperty("molecularOrbital", linearCombination == null ? Integer
+    setPropI("squareData", moSquareData, null);
+    setPropI("squareLinear", moSquareLinear, null);
+    setPropI("title", moTitleFormat, null);
+    setPropI("fileName", viewer.getFileName(), null);
+    setPropI("molecularOrbital", linearCombination == null ? Integer
         .valueOf(moNumber) : linearCombination, null);
     if (moPlane != null && moColorNeg != null)
-      super.setProperty("colorRGB", moColorNeg, null);
+      setPropI("colorRGB", moColorNeg, null);
     if (moPlane != null && moColorPos != null)
-      super.setProperty("colorRGB", moColorPos, null);
+      setPropI("colorRGB", moColorPos, null);
     currentMesh.isColorSolid = false;
     if (moSlabValue != null)
-      super.setProperty("slab", moSlabValue, null);
+      setPropI("slab", moSlabValue, null);
     if (moSlab != null)
       for (int i = 0; i < moSlab.size(); i++)
-        super.setProperty("slab", moSlab.get(i), null);
+        setPropI("slab", moSlab.get(i), null);
     if (moTranslucentLevel != null)
-      super.setProperty("translucenctLevel", moTranslucentLevel, null);
+      setPropI("translucenctLevel", moTranslucentLevel, null);
     if (moTranslucency != null)
-      super.setProperty("translucency", moTranslucency, null);
-    super.setProperty("token", Integer.valueOf(moFill), null);
-    super.setProperty("token", Integer.valueOf(moMesh), null);
-    super.setProperty("token", Integer.valueOf(moDots), null);
-    super.setProperty("token", Integer.valueOf(moFrontOnly), null);
+      setPropI("translucency", moTranslucency, null);
+    setPropI("token", Integer.valueOf(moFill), null);
+    setPropI("token", Integer.valueOf(moMesh), null);
+    setPropI("token", Integer.valueOf(moDots), null);
+    setPropI("token", Integer.valueOf(moFrontOnly), null);
     
     thisModel.put("mesh", currentMesh);
     return;
@@ -476,7 +476,7 @@ public class MolecularOrbital extends Isosurface {
   public String getShapeState() {
     if (htModels == null)
       return "";
-    StringXBuilder s = new StringXBuilder();
+    SB s = new SB();
     int modelCount = viewer.getModelCount();
     for (int i = 0; i < modelCount; i++)
       s.append(getMoState(i));
@@ -488,7 +488,7 @@ public class MolecularOrbital extends Isosurface {
     strID = getId(modelIndex);
     if (!getSettings(strID))
       return "";
-    StringXBuilder s = new StringXBuilder();
+    SB s = new SB();
     int modelCount = viewer.getModelCount();
     if (modelCount > 1)
       appendCmd(s, "frame " + viewer.getModelNumberDotted(modelIndex));
@@ -505,7 +505,7 @@ public class MolecularOrbital extends Isosurface {
       appendCmd(s, "mo plane {" + moPlane.x + " " + moPlane.y + " " + moPlane.z
           + " " + moPlane.w + "}");
     if (moTitleFormat != null)
-      appendCmd(s, "mo titleFormat " + Escape.escapeStr(moTitleFormat));
+      appendCmd(s, "mo titleFormat " + Escape.eS(moTitleFormat));
     //the following is a correct object==object test
     if (moColorNeg != null)
       appendCmd(s, "mo color "
